--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && node ./dist/src/server.js",
+    "start": "npm run build && node ./build/server.js",
     "dev": "tsnd src/server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "db:reset": "npx -y tsc && npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
   },
   "keywords": [],
   "author": "",
@@ -15,15 +16,18 @@
     "@types/restify-errors": "4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "4.17.1",
     "express-async-errors": "3.1",
-    "mysql2": "^3.3.1",
     "restify-errors": "8.0",
-    "sequelize": "^6.31.1"
+    "sequelize": "6.11.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
-    "@types/express": "4.17",
+    "@types/express": "4.17.1",
     "@types/node": "16.18.23",
+    "@types/sequelize": "4.28.14",
+    "mysql2": "2.3.0",
+    "sequelize-cli": "6.2.0",
     "ts-node-dev": "1.1.8",
     "typescript": "4.4.4"
   }
