--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build && node ./build/server.js",
-    "dev": "tsnd src/server.ts",
+    "dev": "tsnd --respawn src/server.ts",
     "build": "tsc",
     "db:reset": "npx -y tsc && npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
   },
@@ -13,12 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/restify-errors": "4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "4.17.1",
     "express-async-errors": "3.1",
-    "restify-errors": "8.0",
     "sequelize": "6.11.0"
   },
   "devDependencies": {
