--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./build/server.js",
   "scripts": {
     "start": "npm run build && node ./build/server.js",
     "dev": "tsnd --respawn src/server.ts",
+    "test": "mocha -r ts-node/register src/tests/*.test.ts --exit -t 10000",
     "build": "tsc",
     "db:reset": "npx -y tsc && npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
   },
@@ -20,12 +21,20 @@
     "sequelize": "6.11.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.5",
+    "@types/chai-http": "^4.2.0",
     "@types/cors": "^2.8.13",
     "@types/express": "4.17.1",
+    "@types/mocha": "^9.1.0",
     "@types/node": "16.18.23",
     "@types/sequelize": "4.28.14",
+    "@types/sinon": "^10.0.14",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.2.1",
     "mysql2": "2.3.0",
     "sequelize-cli": "6.2.0",
+    "sinon": "^13.0.1",
     "ts-node-dev": "1.1.8",
     "typescript": "4.4.4"
   }
