--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,5 +8,5 @@
     "strict": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "build", "src/tests"]
+  "exclude": ["node_modules", "build"]
 }
