--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -25,7 +25,7 @@
   ],
   "rules": {
     "no-underscore-dangle": "off",
-    "no-console": "off",
+    "no-console": "warn",
     "camelcase": "warn",
     "arrow-parens": [
       2,
