--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -6,8 +6,6 @@
   ],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": ["error"],
-    "react/jsx-filename-extension": 0, 
-    "react/require-default-props": 0
+    "prettier/prettier": ["error"]
   }
 }
