--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "frontend",
-  "version": "1.0.0",
+  "name": "sd-0x-project-react-context-hooks-starwars-datatable-filters",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3"
+    "react-dom": "^18.2.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "!src/index.js"
+    ]
   },
   "scripts": {
+    "cy": "cypress run",
+    "cy:open": "cypress open",
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "start": "vite --port 3000",
+    "start": "vite",
     "build": "vite build",
     "serve": "vite preview",
     "lint:styles": "npx stylelint '**/*.scss'",
@@ -21,19 +26,26 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-react": "^4.0.0",
     "@vitest/coverage-istanbul": "^0.31.0",
-    "cypress": "^9.6.1",
-    "cypress-multi-reporters": "^1.6.0",
     "eslint": "^8.40.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.27.5",
@@ -47,10 +59,8 @@
     "stylelint-config-recess-order": "^4.0.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-config-standard-scss": "^9.0.0",
-    "typescript": "^5.0.4",
     "vite": "^4.3.5",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.31.0"
   }
 }
