--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -6,6 +6,16 @@
   ],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "css": "never",
+        "scss": "never"
+      }
+    ]
   }
 }
