--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -17,7 +18,7 @@
     "cy:open": "cypress open",
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "start": "vite",
+    "start": "vite --port 3000",
     "build": "vite build",
     "serve": "vite preview",
     "lint:styles": "npx stylelint '**/*.scss'",
