--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -7,6 +7,8 @@
   "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": ["error"],
+    "import/no-extraneous-dependencies": 0,
+    "react/jsx-props-no-spreading": 0,
     "import/extensions": [
       "error",
       "ignorePackages",
