--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "sd-0x-project-react-context-hooks-starwars-datatable-filters",
-  "version": "0.1.0",
+  "name": "frontend",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "!src/index.js"
-    ]
   },
   "scripts": {
     "cy": "cypress run",
@@ -24,21 +20,6 @@
     "serve": "vite preview",
     "lint:styles": "npx stylelint '**/*.scss'",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js,.jsx"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
