--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "4.17.1",
     "express-async-errors": "3.1",
+    "multer": "^1.4.5-lts.1",
     "sequelize": "6.11.0"
   },
   "devDependencies": {
