--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express": "4.17.1",
     "express-async-errors": "3.1",
     "multer": "^1.4.5-lts.1",
+    "papaparse": "^5.4.1",
     "sequelize": "6.11.0"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/express": "4.17.1",
     "@types/mocha": "^9.1.0",
     "@types/node": "16.18.23",
+    "@types/papaparse": "^5.3.7",
     "@types/sequelize": "4.28.14",
     "@types/sinon": "^10.0.14",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
