--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.3",
     "express": "4.17.1",
     "express-async-errors": "3.1",
+    "joi": "^17.9.2",
     "multer": "^1.4.5-lts.1",
     "papaparse": "^5.4.1",
     "sequelize": "6.11.0"
