--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-toastify": "^9.1.3"
   },
   "scripts": {
     "cy": "cypress run",
